# LinkedIn_Insights_Microservice

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  linkedin.db  linkedin_insights.postman_collection.json  pyproject.toml  requirements.txt
app/: cache.py  config.py  database.py  load_json_to_db.py  main.py  models.py
app/api/: pages.py
app/cache/: cache.py  cache_keys.py
app/services/: page_service.py
app/services/scrapper/: auth.py  company_scraper.py
scripts/: companies.json  load_json_to_db.py  test_pages.py
